syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.r2m.grpc.storagemanager.storage";
option java_outer_classname = "storageProto";
option objc_class_prefix = "HLW";

message CreateStorageRequest {
  string name = 2;
  string location = 3;
  int32 stockCount = 4;
}

message UpdateStorageRequest {
  string id = 1;
  string name = 2;
  string location = 3;
  int32 stockCount = 4;
}

message StorageQuery {
  string id = 1;
  string name = 2;
  string location = 3;
}

message StorageResponse {
  string id = 1;
  string name = 2;
  string location = 3;
  int32 stockCount = 4;
}

service StorageService {
  rpc create(CreateStorageRequest) returns (StorageResponse);

  rpc update(UpdateStorageRequest) returns (StorageResponse);

  rpc get(StorageQuery) returns (stream StorageResponse);
}